# Lycan-Data

./: .env.example  .gitignore  .venv  @michael_p_wolf.txt  AGENTS.md  Dockerfile.app  Dockerfile.postgres  Makefile  README.md  Test.txt  alembic.ini  all_test_files.txt  audit_report.md  build_spa.py  coverage.json  coverage.xml  coverage_branch.json  coverage_branch2.json  docker-compose.dev.yml  docker-compose.yml  john-smith.txt  lycan-osint-spec.md  lycan.py  michael_p_wolf.txt  pyproject.toml  requirements.txt  test-user.txt  test.txt  worker.py
.claude/: claude.md  napkin.md
.github/workflows/: audit.yml  ci.yml  claude-review.yml  code-review.yml
.planning/: 2026-03-31-deep-audit-fix-spec.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  audit-2026-03-31-repo-deep-audit.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phase-1/: 01-RESEARCH.md  PLAN.md
api/: __init__.py  deps.py  main.py  serializers.py
api/routes/: alerts.py  audit.py  behavioural.py  builder.py  compliance.py  crawls.py  dedup.py  discovery.py  enrichment.py  export.py  financial.py  graph.py  knowledge_graph.py  marketing.py  patterns.py  persons.py  relationships.py  search.py  search_query.py  system.py  watchlist.py  ws.py
migrations/: README  env.py
migrations/versions/: 0862064daa56_normalize_identifier_constraint.py  0c06f6f7f3f8_initial_schema.py  167f63d52b3b_merge_identifier_and_dedup_branches.py  a1b2c3d4e5f6_add_criminal_identity_history.py  b2c3d4e5f6a7_add_marketing_audit_progress_optout.py  c3d4e5f6a7b8_add_merged_into_and_dedup_reviews.py  c4d5e6f7a8b9_add_family_tree_snapshots.py  d4e5f6a7b8c9_add_system_audits.py  e5f6a7b8c9d0_add_location_visits.py  f6a7b8c9d0e1_add_property_vehicle_intel_compliance_tables.py  g7h8i9j0k1l2_add_credit_aml_marketing_columns.py  h8i9j0k1l2m3_add_enrichment_score_is_pep.py  i9j0k1l2m3n4_add_builder_jobs_relationship_details.py  j0k1l2m3n4o5_scope_identifier_uniqueness_to_person.py  k1l2m3n4o5p6_add_identifier_already_searched.py  p1q2r3s4t5u6_add_performance_indexes.py
modules/audit/: audit_daemon.py
modules/builder/: criteria_router.py  discovery_engine.py  filters.py
modules/crawlers/: adverse_media_search.py  bankruptcy_pacer.py  base.py  bing_news.py  bluesky_profile.py  ca_courts.py  camoufox_base.py  clustrmaps.py  company_companies_house.py  company_opencorporates.py  company_sec.py  county_assessor_fl.py  county_assessor_multi.py  county_assessor_tx.py  court_courtlistener.py  court_state.py  crypto_bitcoin.py  crypto_blockchair.py  crypto_bscscan.py  crypto_ethereum.py  crypto_polygonscan.py  curl_base.py  cyber_abuseipdb.py  cyber_alienvault.py  cyber_crt.py  cyber_dns.py  cyber_greynoise.py  cyber_shodan.py  cyber_urlscan.py  cyber_virustotal.py  cyber_wayback.py  darkweb_ahmia.py  darkweb_torch.py  db_writer.py  deed_recorder.py  discord.py  domain_theharvester.py  domain_whois.py  email_breach.py  email_dehashed.py  (+139 more)
modules/discovery/: __init__.py  base.py  crawler_builder.py  orchestrator.py  tools.py
modules/dispatcher/: __init__.py  dispatcher.py  freshness_scheduler.py  growth_daemon.py  pending_recovery.py
modules/enrichers/: __init__.py  adverse_media_enricher.py  auto_dedup.py  biographical.py  burner_detector.py  cascade_enricher.py  certification.py  commercial_tagger.py  confidence_scorer.py  data_verifiers.py  deduplication.py  entity_resolution.py  financial_aml.py  genealogy_enricher.py  golden_record.py  graph_dedup.py  location_enricher.py  marketing_tags.py  ml_dedup.py  pep_enricher.py  property_enricher.py  psychological.py  ranking.py  timeline_builder.py  verification.py
modules/export/: gedcom.py
modules/graph/: __init__.py  company_intel.py  entity_graph.py  knowledge_graph.py  relationship_expansion.py  saturation_crawler.py  ubo_discovery.py
modules/patterns/: anomaly.py  inverted_index.py  temporal.py
modules/pipeline/: __init__.py  aggregator.py  enrichment_orchestrator.py  ingestion_daemon.py  pivot_enricher.py  progress_tracker.py
modules/search/: __init__.py  index_daemon.py  meili_indexer.py  typesense_indexer.py
scripts/: add_categories.py  audit.py  check_imports.py  claude_review.py  entrypoint.sh  gemini_review.py  gen_category_inits.py  init_db.sql  ollama_review.py  selfheal.py  verify_launch.sh
shared/: cache.py  cf_cookie_cache.py  circuit_breaker.py  config.py  constants.py  data_quality.py  db.py  events.py  freshness.py  health.py  proxy_pool.py  rate_limiter.py  scrapy_middleware.py  tor.py  transport_registry.py
shared/models/: __init__.py  address.py  alert.py  audit.py  base.py  behavioural.py  breach.py  builder_job.py  burner.py  compliance_ext.py  crawl.py  credit_risk.py  criminal.py  darkweb.py  dedup_review.py  discovery.py  education.py  employment.py  family_tree.py  identifier.py  identifier_history.py  identity_document.py  intelligence.py  location_visit.py  marketing.py  media.py  opt_out.py  person.py  professional.py  progress.py  property.py  quality.py  relationship.py  relationship_detail.py  timeline.py  (+5 more)
static/: app.js  graph_worker.js  index.html  knowledge_graph.js  relationship_graph.js  style.css
templates/: activity.html  discovery.html  index.html  knowledge_graph.html  person.html  persons.html  relationship_graph.html
tests/: conftest.py  test_branch_coverage.py  test_final_api_wave4.py  test_final_gaps.py  test_health.py  test_integration.py  test_integration_dedup_pipeline.py  test_integration_search_pipeline.py  test_load_concurrent_search.py  test_migrations.py  test_patterns_wave4.py  test_shared_transport_wave3.py  test_transport_registry.py  test_unit_scrapers.py
(+286 files in other folders)
