[tool.poetry]
name = "lycan"
version = "0.1.0"
description = "Recursive people intelligence platform"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
redis = "^5.2"
stem = "^1.8"
phonenumbers = "^8.13"
spacy = "^3.8"
networkx = "^3.4"
httpx = {extras = ["socks"], version = "^0.28"}
playwright = "^1.49"
scrapy = "^2.12"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.20"
aiofiles = "^24.1"
jinja2 = "^3.1"
python-dateutil = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
anyio = "^4.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
]
addopts = "--tb=short"

[tool.coverage.run]
omit = ["tests/*", "migrations/*", "scripts/*", "build_spa.py", "lycan.py", "worker.py", "shared/scrapy_middleware.py"]

[tool.coverage.report]
omit = ["tests/*", "migrations/*", "scripts/*", "build_spa.py", "lycan.py", "worker.py", "shared/scrapy_middleware.py"]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except Exception.*pass",
    "while self._running:",
    "async def start\\(self\\)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "B904",   # raise from within except (too strict for crawlers)
    "UP007",  # use X | Y for type unions (Python 3.12 but breaks some patterns)
    "E402",   # module-level import not at top (intentional in main.py / deduplication)
    "B023",   # function definition does not bind loop variable (false positive in lambdas)
    "E741",   # ambiguous variable name (l used intentionally in some places)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "E741"]
"migrations/**" = ["E501", "F401"]
"scripts/**" = ["T201", "E741"]  # allow print() and l in scripts
"shared/models/**" = ["F821"]  # SQLAlchemy forward references resolve at runtime
